samples/_failures_safe/1761044739_cdf857_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_feb071c1.c: In function ‘main’:
./samples/SAFE/__tmp_feb071c1.c:146:5: error: expected declaration or statement at end of input
  146 |     add_edge(&g, 0, 1);
      |     ^~~~~~~~
